Intialized elm and some node scripts

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-	</head>
-	<body>
-		<h1>hello world</h1>
-	</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
+  <body>
+    <h1>Hello World</h1>
+    <script src="elm.js"></script>
+    <script>
+      var app = Elm.Main.init({});
+    </script>
+  </body>
 </html>
