Started SPA things + npm format script

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
+    <!-- Maybe we use Material Design Lite https://getmdl.io/started/ -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
     <script src="elm.js"></script>
     <script>
       var app = Elm.Main.init({});
